Full Blogpost "Learning Embedding Spaces..."

--- a/content/blog/learning_embedding_spaces_assets/learning_embedding_spaces.bib
+++ b/content/blog/learning_embedding_spaces_assets/learning_embedding_spaces.bib
@@ -6,7 +6,7 @@
 	author = {He, Kaiming and Fan, Haoqi and Wu, Yuxin and Xie, Saining and Girshick, Ross},
 	year = {2020},
 	pages = {9729--9738},
-	file = {Full Text PDF:C\:\\Users\\patri\\Zotero\\storage\\74Q5NEFE\\He et al. - 2020 - Momentum Contrast for Unsupervised Visual Represen.pdf:application/pdf},
+	booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition}
 }
 
 @inproceedings{chen_empirical_2021,
@@ -17,6 +17,7 @@
 	author = {Chen, Xinlei and Xie, Saining and He, Kaiming},
 	year = {2021},
 	pages = {9640--9649},
+	booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision},
 	file = {Full Text PDF:C\:\\Users\\patri\\Zotero\\storage\\PEZ3YU49\\Chen et al. - 2021 - An Empirical Study of Training Self-Supervised Vis.pdf:application/pdf},
 }
 
@@ -157,6 +158,7 @@
 	author = {Schroff, Florian and Kalenichenko, Dmitry and Philbin, James},
 	year = {2015},
 	pages = {815--823},
+	booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
 	file = {Full Text PDF:C\:\\Users\\patri\\Zotero\\storage\\LKVW6L9T\\Schroff et al. - 2015 - FaceNet A Unified Embedding for Face Recognition .pdf:application/pdf},
 }
 
@@ -167,6 +169,7 @@
 	author = {Oh Song, Hyun and Xiang, Yu and Jegelka, Stefanie and Savarese, Silvio},
 	year = {2016},
 	pages = {4004--4012},
+	booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
 	file = {Full Text PDF:C\:\\Users\\patri\\Zotero\\storage\\EUNE7MSG\\Oh Song et al. - 2016 - Deep Metric Learning via Lifted Structured Feature.pdf:application/pdf},
 }
 
@@ -210,6 +213,7 @@
 	author = {Barbano, Carlo Alberto and Dufumier, Benoit and Tartaglione, Enzo and Grangetto, Marco and Gori, Pietro},
 	month = sep,
 	year = {2022},
+	booktitle = {The Eleventh International Conference on Learning Representations},
 	file = {Full Text PDF:C\:\\Users\\patri\\Zotero\\storage\\TAKGZ7JE\\Barbano et al. - 2022 - Unbiased Supervised Contrastive Learning.pdf:application/pdf},
 }
 
@@ -218,6 +222,8 @@
 	abstract = {Contrastive representation learning has been outstandingly successful in practice. In this work, we identify two key properties related to the contrastive loss: (1) alignment (closeness) of features from positive pairs, and (2) uniformity of the induced distribution of the (normalized) features on the hypersphere. We prove that, asymptotically, the contrastive loss optimizes these properties, and analyze their positive effects on downstream tasks. Empirically, we introduce an optimizable metric to quantify each property. Extensive experiments on standard vision and language datasets conﬁrm the strong agreement between both metrics and downstream task performance. Directly optimizing for these two metrics leads to representations with comparable or better performance at downstream tasks than contrastive learning. Project Page: ssnl.github.io/hypersphere. Code: github.com/SsnL/align uniform. Alignment: Similar samples have similar features.},
 	language = {en},
 	author = {Wang, Tongzhou and Isola, Phillip},
+	year = {2020},
+	booktitle = {Proceedings of the 37 th International Conference on Machine Learning},
 	file = {Wang and Isola - Understanding Contrastive Representation Learning .pdf:C\:\\Users\\patri\\Zotero\\storage\\EW5A5T8B\\Wang and Isola - Understanding Contrastive Representation Learning .pdf:application/pdf},
 }
 
