Improve CS61 Description

--- a/content/courses/2024su_cs61.md
+++ b/content/courses/2024su_cs61.md
@@ -6,4 +6,4 @@ Tags: news
 ---
 
 As a lecturer for the summer of 2024, I gave active-learning focused lectures, developed exams,  and held office hours for CS 61.
-The course covered proof writing, propositional logic, counting, relations, and graph theory.
+The course covered proof writing, propositional logic, combinatorics, relations, graph theory, and abstract algebra.
